<resources>
    <string name="app_name">Vision</string>
    <string name="action_settings">Settings</string>
    <string name="image_picker_error">1</string>
    <string name="loading_message">loading</string>
    <string name="dialog_select_camera">camera</string>
    <string name="dialog_select_gallery">select galery</string>
    <string name="dialog_select_prompt">prompt</string>
    <string name="title_activity_lista_imagenes">listaImagenes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_loggin">Loggin</string>
    <string name="technow">Technow</string>
    <string name="Usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="recordar_contrase_a">Recordar contraseña</string>
    <string name="log_in">Log in</string>
    <string name="recordad_usuario_y_contrase_a">Recordar usuario y contraseña</string>
</resources>
